--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
 
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="8dp"
 
 
         android:gravity="center_vertical"
         android:text="Серий введено:"
-        android:textSize="18sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_next_error" />
@@ -36,6 +36,9 @@
 
 
     <!-- dynamic test \\ series counter -->
+
+
+    <!-- script starter \\ button -->
     <TextView
         android:id="@+id/series_cnt"
 
@@ -43,68 +46,62 @@
         android:layout_height="wrap_content"
 
 
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
         android:text="0"
-        android:textSize="18sp"
+        android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/static_text" />
-
-
-
-
-
-    <!-- script starter \\ button -->
-    <Button
-        android:id="@+id/button_extend"
-
-        android:layout_width="159dp"
-        android:layout_height="68dp"
-
-        android:layout_marginTop="32dp"
-
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="#FFD13B"
-        android:text="Протянуть серии"
-        android:textColor="@android:color/black"
-        android:textColorLink="#FFEB3B"
-        android:textSize="18sp"
-
-
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintStart_toEndOf="@+id/static_text"
+        app:layout_constraintTop_toTopOf="@+id/static_text" />
 
 
     <!-- Main text field -->
+    <Button
+        android:id="@+id/button_extend"
+
+        android:layout_width="131dp"
+        android:layout_height="72dp"
+
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="6dp"
+        android:backgroundTint="#FFD13B"
+        android:text="Протянуть серии"
+        android:textColor="@android:color/black"
+
+
+        android:textColorLink="#FFEB3B"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/static_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/main_field"
 
-        android:textIsSelectable="true"
-        android:scrollbars="vertical"
-        android:gravity="top|start"
-
         android:layout_width="0dp"
         android:layout_height="0dp"
-
         android:layout_marginStart="4dp"
-        android:layout_marginTop="12dp"
+
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
+
         android:background="@android:drawable/edit_text"
-
-
+        android:gravity="top|start"
         android:hint="Введите текст здесь..."
         android:inputType="textMultiLine|textCapSentences"
+
+
         android:maxLines="100"
-
         android:paddingStart="16dp"
-
         android:paddingTop="12dp"
-        android:paddingEnd="8dp"
-        android:paddingBottom="8dp"
 
+        android:paddingEnd="8dp"
+
+        android:paddingBottom="8dp"
+        android:scrollbars="vertical"
         android:textColor="@android:color/black"
+
+        android:textIsSelectable="true"
         android:textSize="18sp"
         android:textStyle="bold"
         android:visibility="visible"
@@ -116,23 +113,24 @@
         app:layout_constraintTop_toBottomOf="@+id/button_extend" />
 
 
-
     <ImageButton
         android:id="@+id/button_copy"
         android:layout_width="48dp"
         android:layout_height="62dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
 
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintEnd_toEndOf="@+id/main_field"
+        app:layout_constraintTop_toTopOf="@+id/main_field"
         app:srcCompat="?attr/actionModeCopyDrawable" />
 
     <ImageButton
         android:id="@+id/button_delete"
-        android:layout_width="45dp"
-        android:layout_height="60dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
         android:background="#00FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -140,14 +138,23 @@
 
     <ImageButton
         android:id="@+id/button_next_error"
-        android:layout_width="59dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="12dp"
         android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/button_delete"
         app:layout_constraintStart_toEndOf="@+id/button_delete"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button_delete"
         app:srcCompat="@android:drawable/ic_media_next" />
+
+    <ImageView
+        android:id="@+id/button_settings"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="12dp"
+        app:layout_constraintStart_toEndOf="@+id/button_next_error"
+        app:layout_constraintTop_toTopOf="@+id/button_next_error"
+        app:srcCompat="@android:drawable/ic_menu_preferences" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
