--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,6 @@
     tools:context=".MainActivity">
 
 
-
-
-    <!-- static text \\ "серий введено" -->
     <TextView
         android:id="@+id/static_text"
 
@@ -29,16 +26,12 @@
         android:text="Серий введено:"
         android:textSize="15sp"
         android:textStyle="bold"
+        android:backgroundTint="@color/zero_color"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_next_error" />
 
 
-
-
-    <!-- dynamic test \\ series counter -->
-
-
-    <!-- script starter \\ button -->
     <TextView
         android:id="@+id/series_cnt"
 
@@ -50,11 +43,12 @@
         android:text="0"
         android:textSize="15sp"
         android:textStyle="bold"
+        android:backgroundTint="@color/zero_color"
+
         app:layout_constraintStart_toEndOf="@+id/static_text"
         app:layout_constraintTop_toTopOf="@+id/static_text" />
 
 
-    <!-- Main text field -->
     <Button
         android:id="@+id/button_extend"
 
@@ -64,11 +58,11 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="6dp"
         android:backgroundTint="#FFD13B"
-        android:text="Протянуть серии"
+        android:text="@string/text_extend"
+
         android:textColor="@android:color/black"
+        android:textColorLink="@color/button_action_color"
 
-
-        android:textColorLink="#FFEB3B"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/static_text"
@@ -131,7 +125,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
-        android:background="#00FFFFFF"
+        android:background="@color/zero_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_delete" />
@@ -141,20 +135,34 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="12dp"
-        android:background="#00FFFFFF"
+        android:background="@color/zero_color"
         app:layout_constraintBottom_toBottomOf="@+id/button_delete"
         app:layout_constraintStart_toEndOf="@+id/button_delete"
         app:layout_constraintTop_toTopOf="@+id/button_delete"
         app:srcCompat="@android:drawable/ic_media_next" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/button_settings"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="12dp"
+        android:backgroundTint="@color/zero_color"
         app:layout_constraintStart_toEndOf="@+id/button_next_error"
         app:layout_constraintTop_toTopOf="@+id/button_next_error"
         app:srcCompat="@android:drawable/ic_menu_preferences" />
+
+    <FrameLayout
+        android:id="@+id/settings_field"
+        android:layout_width="225sp"
+        android:layout_height="300sp"
+        android:layout_marginTop="50dp"
+        android:background="#E6E6E6"
+
+        android:visibility="gone"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
