--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,159 +10,100 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <TextView
-        android:id="@+id/static_text"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_marginStart="4dp"
-
-        android:layout_marginTop="8dp"
-
-
-        android:gravity="center_vertical"
-        android:text="Серий введено:"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:backgroundTint="@color/zero_color"
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_next_error" />
-
-
     <TextView
         android:id="@+id/series_cnt"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-
-        android:layout_marginStart="4dp"
-        android:text="0"
+        android:gravity="center_vertical"
         android:textSize="15sp"
         android:textStyle="bold"
         android:backgroundTint="@color/zero_color"
-
-        app:layout_constraintStart_toEndOf="@+id/static_text"
-        app:layout_constraintTop_toTopOf="@+id/static_text" />
-
+        android:text="@string/text_dynamic_series_cnt_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4sp"
+        android:layout_marginTop="8sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_next_error"/>
 
     <Button
-        android:id="@+id/button_extend"
-
-        android:layout_width="131dp"
-        android:layout_height="72dp"
-
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="6dp"
-        android:backgroundTint="#FFD13B"
-        android:text="@string/text_extend"
-
-        android:textColor="@android:color/black"
-        android:textColorLink="@color/button_action_color"
-
+        android:id="@+id/button_action"
+        android:backgroundTint="@color/button_action_color"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/static_text"
+        android:textColor="@android:color/black"
+        android:text="@string/text_extend"
+        android:layout_width="175sp"
+        android:layout_height="75sp"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="4sp"
+        android:layout_marginEnd="10sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/button_settings" />
 
     <EditText
         android:id="@+id/main_field"
-
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="4dp"
-
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="4dp"
-
-        android:background="@android:drawable/edit_text"
         android:gravity="top|start"
-        android:hint="Введите текст здесь..."
         android:inputType="textMultiLine|textCapSentences"
-
-
         android:maxLines="100"
-        android:paddingStart="16dp"
-        android:paddingTop="12dp"
-
-        android:paddingEnd="8dp"
-
-        android:paddingBottom="8dp"
         android:scrollbars="vertical"
-        android:textColor="@android:color/black"
-
         android:textIsSelectable="true"
+        android:visibility="visible"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:visibility="visible"
-
-
+        android:background="@android:drawable/edit_text"
+        android:hint="@string/text_hint_help"
+        android:textColorHint="@color/gray_hint"
+        android:layout_width="0sp"
+        android:layout_height="0sp"
+        android:layout_marginStart="4sp"
+        android:layout_marginTop="4sp"
+        android:layout_marginEnd="4sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_extend" />
-
+        app:layout_constraintTop_toBottomOf="@id/series_cnt" />
 
     <ImageButton
         android:id="@+id/button_copy"
-        android:layout_width="48dp"
-        android:layout_height="62dp"
-
-
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="4dp"
-        app:layout_constraintEnd_toEndOf="@+id/main_field"
-        app:layout_constraintTop_toTopOf="@+id/main_field"
-        app:srcCompat="?attr/actionModeCopyDrawable" />
+        app:srcCompat="?attr/actionModeCopyDrawable"
+        android:layout_width="48sp"
+        android:layout_height="62sp"
+        android:layout_marginTop="5sp"
+        android:layout_marginEnd="5sp"
+        app:layout_constraintEnd_toEndOf="@id/main_field"
+        app:layout_constraintTop_toTopOf="@id/main_field" />
 
     <ImageButton
         android:id="@+id/button_delete"
+        android:background="@color/zero_color"
+        app:srcCompat="@android:drawable/ic_menu_delete"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
-        android:background="@color/zero_color"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_delete" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/button_next_error"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="12dp"
         android:background="@color/zero_color"
-        app:layout_constraintBottom_toBottomOf="@+id/button_delete"
-        app:layout_constraintStart_toEndOf="@+id/button_delete"
-        app:layout_constraintTop_toTopOf="@+id/button_delete"
-        app:srcCompat="@android:drawable/ic_media_next" />
+        app:srcCompat="@android:drawable/ic_media_next"
+        android:layout_width="48sp"
+        android:layout_height="48sp"
+        android:layout_marginStart="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/button_delete"
+        app:layout_constraintStart_toEndOf="@id/button_delete"
+        app:layout_constraintTop_toTopOf="@id/button_delete" />
 
     <ImageButton
         android:id="@+id/button_settings"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="12dp"
         android:backgroundTint="@color/zero_color"
-        app:layout_constraintStart_toEndOf="@+id/button_next_error"
-        app:layout_constraintTop_toTopOf="@+id/button_next_error"
-        app:srcCompat="@android:drawable/ic_menu_preferences" />
-
-    <FrameLayout
-        android:id="@+id/settings_field"
-        android:layout_width="225sp"
-        android:layout_height="300sp"
-        android:layout_marginTop="50dp"
-        android:background="#E6E6E6"
-
-        android:visibility="gone"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></FrameLayout>
-
+        app:srcCompat="@android:drawable/ic_menu_preferences"
+        android:layout_width="48sp"
+        android:layout_height="48sp"
+        android:layout_marginStart="14sp"
+        app:layout_constraintStart_toEndOf="@id/button_next_error"
+        app:layout_constraintTop_toTopOf="@id/button_next_error" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
